CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

PROJECT(test)

set(CMAKE_CXX_FLAGS "-W -Wall -D UNITTEST")

FIND_PACKAGE(PCL 1.3 REQUIRED COMPONENTS common io)
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../Include ${CMAKE_CURRENT_SOURCE_DIR}/igloo-igloo.1.1.1/)

SET(SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/test_landmark_extraction.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/test_data_association.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CustomConstraint.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/../src/Landmarks.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/../src/DataAssociation.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/../src/CovarianceMatrice.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/../src/KalmanGainMatrice.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/../src/SystemStateMatrice.cpp
  )

ADD_EXECUTABLE(test ${SOURCES})

TARGET_LINK_LIBRARIES(test ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
